# sparrow_bot

./: LICENSE  README.md  docker-compose.yml
bot/: .gitignore  Dockerfile  bot.py  logging_config.py  manage.py  pyproject.toml  requirements.txt
bot/cogs/: example.py
